Fixed image too small on phone

--- a/src/components/AboutMe/styles.module.css
+++ b/src/components/AboutMe/styles.module.css
@@ -32,6 +32,7 @@
 
 .imageWrapper img{
   width: 80%;
+  min-width: 300px;
 }
 
 .aboutMeWrapper{
